--- a/src/index.scss
+++ b/src/index.scss
@@ -25,8 +25,15 @@ $border-bl1: 1px solid #000000;
 }
 
 .drum-pads {
+    display: flex;
+    flex-wrap: wrap;
+    width: 20em;
     margin-left: 0.5em;
     margin-bottom: 0.5em;
+}
+
+.drum-pad {
+
 }
 
 .row {
@@ -48,7 +55,7 @@ $border-bl1: 1px solid #000000;
     display: flex;
     width: 5em;
     height: 5em;
-    border: $border-bl1;
+    border: $border-bl1;       
 }
 
 .letter-key {
@@ -56,7 +63,6 @@ $border-bl1: 1px solid #000000;
 }
 
 .drum-pad-controls {    
-
     border: $border-bl1;    
 }
 
