--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,11 @@
 $border-bl1: 1px solid #000000;
+$case-color: #E0B17D;
+$active-button: #00AD20;
+$inactive-button: #5A9966;
+$active-display: #5498d1;
+$inactive-display: #79846c;
+
+// #743d30;
 
 #root{
     display: flex;
@@ -11,13 +18,24 @@ $border-bl1: 1px solid #000000;
     width: 25em;
     margin: auto;
     border: $border-bl1;
+    text-align: center;   
+    background-color: $case-color;
 }
 
 .display-wrap {
     display: flex;
     margin: 0.5em 0.5em;
     height: 2em;
-    border: $border-bl1;      
+    border: $border-bl1; 
+    background-color: $active-display;
+}
+
+.display-active-color {
+    background-color: $active-display;
+}
+
+.display-inactive-color {
+    background-color: $inactive-display;
 }
 
 #display { 
@@ -30,10 +48,6 @@ $border-bl1: 1px solid #000000;
     width: 20em;
     margin-left: 0.5em;
     margin-bottom: 0.5em;
-}
-
-.drum-pad {
-
 }
 
 .row {
@@ -51,11 +65,18 @@ $border-bl1: 1px solid #000000;
     flex-direction: row;    
 }
 
-.drum-pad {    
-    display: flex;
+.drum-pad {        
     width: 5em;
     height: 5em;
-    border: $border-bl1;       
+    border: $border-bl1; 
+    padding-top: 1.7em;
+    box-sizing: border-box; 
+    background-color: $inactive-button;
+    cursor: pointer;    
+}
+
+.power-on-pad {
+    background: radial-gradient(#b6d6bc, $inactive-button)
 }
 
 .letter-key {
@@ -63,21 +84,25 @@ $border-bl1: 1px solid #000000;
 }
 
 .drum-pad-controls {    
-    border: $border-bl1;    
+    border: $border-bl1; 
+    margin-bottom: 0.5em;
+    margin-right: 0.5em;
+    //margin-left: 0.5em;
 }
 
 .volume-wrapper {
     display: inline-block;
-    width: 2em;
-    //height: 17em;  
+    width: 2em;    
     border: $border-bl1; 
+    background-color: #743d30;
     
     input {
         width: 16em;
         height: 2em;
         margin: 0;
-        transform-origin: 1em 1.5em 0;
-        transform: rotate(90deg);        
+        transform-origin: 8.5em 8.5em 0;
+        transform: rotate(-90deg);  
+        cursor: pointer;      
     }
   }
 
@@ -85,6 +110,7 @@ $border-bl1: 1px solid #000000;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: #E0852C;
 }
 
 .switch-btn {
@@ -92,6 +118,15 @@ $border-bl1: 1px solid #000000;
     height: 1.5em;
     margin: 1em;
     border: $border-bl1;
+    cursor: pointer;    
+}
+
+.power-active-color {
+    background-color: $active-button;
+}
+
+.power-inactive-color {
+    background-color: $inactive-button;
 }
 
 @media (max-width: 750px) {
